--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1068,7 +1068,7 @@
       margin-right: 30px;
 
       @include screen('md') {
-        width: 160px;
+        width: calc((100% - 60px)/3);
       }
 
       @include screen('sm') {
@@ -1086,7 +1086,7 @@
 
     #{$b}__list_columns_sm2 & {
       @include screen('sm') {
-        width: 47.2%;
+        width: calc((100% - 10px)/2);
         margin-right: 10px;
       }
 
