--- a/app/components/advanced-filter/advanced-filter.scss
+++ b/app/components/advanced-filter/advanced-filter.scss
@@ -16,19 +16,19 @@
     display: block;
     box-sizing: border-box;
     width: 100%;
-    padding: 50px 50px 35px;
+    padding: 50px 50px 105px;
     overflow: hidden;
 
     @include screen('lg') {
-      padding: 50px 40px 35px;
+      padding: 50px 40px 105px;
     }
 
     @include screen('md') {
-      padding: 50px 50px 35px;
+      padding: 50px 50px 105px;
     }
 
     @include screen('sm') {
-      padding: 50px 25px 35px;
+      padding: 50px 25px 105px;
     }
   }
 
@@ -54,6 +54,12 @@
     &_transparent {
       background-color: transparent;
     }
+
+    &_md-fixed {
+      @include screen('md') {
+        position: fixed;
+      }
+    }
   }
 
   &__clear {
@@ -65,6 +71,12 @@
 
     &:not(:last-child) {
       margin-right: 40px;
+    }
+  }
+
+  &__scrollblock {
+    @include screen('md') {
+      max-height: 100%;
     }
   }
 
