--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -3,7 +3,7 @@ mixin search-filter()
     .container
       +e.content
         +e.overlay(data-filter-overlay)
-        +e.popup(data-filter="advancedSearch")
+        +e.popup_md-full(data-filter="advancedSearch" data-md-full)
           +advanced-filter()
           +e.panel
             .container
