--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -9,9 +9,8 @@
   left: 0;
   width: 100%;
   max-width: 100vw;
-  z-index: 10;
-  transition:
-    border $ease-main;
+  // z-index: 10;
+  transition: border $ease-main;
   background-color: $color-bg;
   box-sizing: border-box;
   height: 115px;
@@ -39,6 +38,7 @@
     box-sizing: border-box;
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
+    z-index: 10;
     // background-color: $color-bg;
 
     @include screen('sm') {
