--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -3,7 +3,7 @@
 
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   top: 0;
   left: 0;
