--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -4,9 +4,11 @@
   padding-top: 115px;
   overflow: hidden;
   min-height: calc(100vh - 300px);
+  width: 100%;
+  max-width: 100vw;
 
   @include screen('sm', max) {
-    padding-top: 74px;
+    padding-top: 50px;
   }
 
   // &.is-short {
