--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -3,6 +3,7 @@
 
   display: block;
   width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
   border-top: 1px solid rgba($color-basic-light, .21);
   padding: 63px 0 0;
