--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -21,7 +21,7 @@
   overscroll-behavior: none;
 
   @include screen('sm') {
-    height: 74px;
+    height: 50px;
   }
 
   &__wrapper {
@@ -36,13 +36,12 @@
     width: 100%;
     height: 70px;
     box-sizing: border-box;
-    border-top: 1px solid transparent;
-    border-bottom: 1px solid transparent;
     z-index: 10;
     // background-color: $color-bg;
 
     @include screen('sm') {
-      top: 13px;
+      position: fixed;
+      top: 0;
       height: 50px;
     }
 
@@ -52,7 +51,6 @@
       height: 89px;
       top: -19px;
       width: 100%;
-      border-top: 1px solid transparent;
       border-bottom: 1px solid transparent;
       background-color: $color-bg;
       transition:
@@ -62,8 +60,8 @@
       z-index: 1;
 
       @include screen('sm') {
-        height: 63px;
-        top: -13px;
+        height: 50px;
+        top: 0;
       }
     }
 
