update for space page

--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -4,7 +4,8 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 127px;
+  // height: 127px;
+  height: 170px;
   border-bottom: 1px solid $color-border-light;
   overflow: hidden;
   transition: height $ease-main;
@@ -16,7 +17,7 @@
   }
 
   @include screen('sm') {
-    height: 157px;
+    height: 190px;
   }
 
   &::after {
