--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -71,7 +71,7 @@ block content
                 +accordion-button
                 +accordion-body
                   +offer-short
-                    +offer-info('', '&pound;185 per month')._line.__info
+                    +offer-info('', '&pound;185 per/mo')._line.__info
                       +box._size17._orange.hide-from-sm
                       +e.title Hot desk
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -82,6 +82,7 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 6
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
                       ul
                         li 24 hours access
@@ -93,7 +94,7 @@ block content
                 +accordion-button
                 +accordion-body
                   +offer-short
-                    +offer-info('', '&pound;211 per month')._line.__info
+                    +offer-info('', '&pound;211 per/mo')._line.__info
                       +box._size17._orange.hide-from-sm
                       +e.title Hot desk
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -104,6 +105,7 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 7
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
                       ul
                         li 24 hours access
@@ -114,8 +116,8 @@ block content
               +accordion
                 +accordion-button
                 +accordion-body
-                  +offer-short
-                    +offer-info('', '&pound;177 per month')._line.__info
+                  +offer-short.is-soon
+                    +offer-info('', '&pound;177 per/mo')._line.__info
                       +box._size17._orange.hide-from-sm
                       +e.title Hot desk
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -124,8 +126,10 @@ block content
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button Arrange a viewing
                         +button('a')._smaller.__button Request Reservation
-                      +e.available AVIALABLE NOW
+                      +e.available AVIALABLE FROM:&nbsp;
+                        b 6 July 2019
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 9
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
                       ul
                         li 24 hours access
@@ -139,7 +143,7 @@ block content
                 +accordion-button
                 +accordion-body
                   +offer-short.is-not-available
-                    +offer-info('', '&pound;185 per month')._line.__info
+                    +offer-info('', '&pound;185 per/mo')._line.__info
                       +box._size17._red.hide-from-sm
                       +e.title dedicated desk
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -150,12 +154,13 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 6
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
               +accordion
                 +accordion-button
                 +accordion-body
                   +offer-short
-                    +offer-info('', '&pound;211 per month')._line.__info
+                    +offer-info('', '&pound;211 per/mo')._line.__info
                       +box._size17._red.hide-from-sm
                       +e.title dedicated desk
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -166,6 +171,7 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 6
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +tab-wrapper()(data-tab="tab3" data-tab-group="offer")
             +accordions
@@ -173,7 +179,7 @@ block content
                 +accordion-button
                 +accordion-body
                   +offer-short
-                    +offer-info('', '&pound;211 per month')._line.__info
+                    +offer-info('', '&pound;211 per/mo')._line.__info
                       +box._size17._blue.hide-from-sm
                       +e.title meetin room
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -184,6 +190,7 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 6
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
           +tab-wrapper()(data-tab="tab4" data-tab-group="offer")
             +accordions
@@ -191,7 +198,7 @@ block content
                 +accordion-button
                 +accordion-body
                   +offer-short.is-not-available
-                    +offer-info('', '&pound;185 per month')._line.__info
+                    +offer-info('', '&pound;185 per/mo')._line.__info
                       +box._size17._green.hide-from-sm
                       +e.title office space
                       +button-heart._gray._small.js-heart.hide-from-sm
@@ -202,6 +209,7 @@ block content
                         +button('a')._smaller.__button Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
+                      h4 Hot desk with Workshops Floor 6
                       p This text is some part of every offer for every building. This text is meant to be some textual lead for all additional information you can put inside every offer. So it can be long and that’s why we should put the limit for it.
   +section._smaller-mg
     +section-header
