--- a/app/components/offer-short/offer-short.scss
+++ b/app/components/offer-short/offer-short.scss
@@ -146,6 +146,10 @@
     .is-active #{$b}:not(.is-not-available) &,
     .is-active #{$b}:hover:not(.is-not-available) & {
       @include screen('md') {
+        opacity: 0;
+      }
+
+      @include screen('sm') {
         opacity: 1;
       }
     }
