add pointer to accordion body

--- a/app/blocks/accordion/accordion.scss
+++ b/app/blocks/accordion/accordion.scss
@@ -121,6 +121,7 @@
     width: 100%;
     box-sizing: border-box;
     touch-action: manipulation;
+    cursor: pointer;
 
     @include screen('lg') {
       padding: 16px 0 29px 34px;
