fixes: change ajax request place

--- a/app/blocks/uploader/uploader.pug
+++ b/app/blocks/uploader/uploader.pug
@@ -1,5 +1,5 @@
 mixin uploader()
-  +b.LABEL.uploader&attributes(attributes).js-upload-file(data-max-size="5000000" data-min-size="300000" data-format="jpg,png,bmp" data-total-count="25")
+  +b.LABEL.uploader&attributes(attributes).js-upload-file(data-max-size="5000000" data-min-size="300000" data-format="jpg,png,bmp" data-total-count="25"  data-url-template='assets/data/templates.json')
     +e.INPUT(type="file" multiple="multiple").input
     +e.content
       +button-icon('div', 'arrow3')._icon_left._huge._fz24.__button Upload Space Photos
@@ -8,7 +8,7 @@ mixin uploader()
         block
 
 mixin uploader-small()
-  +b.LABEL.uploader_small&attributes(attributes).js-upload-file(data-max-size="5000000" data-min-size="300000" data-format="jpg,png,bmp" data-total-count="25")
+  +b.LABEL.uploader_small&attributes(attributes).js-upload-file(data-max-size="5000000" data-min-size="300000" data-format="jpg,png,bmp" data-total-count="25"  data-url-template='assets/data/templates.json')
     +e.INPUT(type="file" multiple="multiple").input
     +e.content
       +icon('plus').plus
