space update - disabled fields for offers tabs

--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -89,6 +89,17 @@
       }
     }
 
+    &.is-disabled {
+      color: $color-disabled-tabs;
+      border-bottom-color: $color-border-light;
+      cursor: not-allowed;
+      pointer-events: none;
+
+      &:hover {
+        box-shadow: none;
+      }
+    }
+
     &_blue {
       border-bottom-color: $color-meeting-room;
 
