--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -62,8 +62,8 @@ block content
         +tabs
           +tab()(data-tab-target="tab1")._orange.active Hot Desk
           +tab()(data-tab-target="tab2")._red Dedicated desk
-          +tab()(data-tab-target="tab3")._blue Meeting room
-          +tab()(data-tab-target="tab4")._green Office space
+          +tab()(data-tab-target="tab3")._blue.is-disabled Meeting room
+          +tab()(data-tab-target="tab4")._green.is-disabled Office space
         +tabs-content
           +tab-wrapper()(data-tab="tab1" data-tab-group="offer").active
             +accordions
