--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -140,6 +140,7 @@ $color-range-track: #ececec;
 $color-range-handler-active: #434b57;
 $color-hide-button-border: #e1e8ea;
 $color-button-radio-border: #c5c9ca;
+$color-disabled-tabs: #d6dce2;
 
 // ##########
 // Transitions
