account settings update + popup password change

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -418,7 +418,7 @@
       margin-top: -0.2em;
 
       @include screen('md') {
-        margin-top: -12px;
+        margin-top: -36px;
       }
 
       p:not(:first-child),
@@ -772,6 +772,18 @@
       @include text15;
 
       line-height: 1;
+    }
+
+    &_big {
+      @include heading-4;
+
+      @include screen('sm') {
+        @include text15;
+      }
+    }
+
+    &_mt {
+      margin-top: 13px;
     }
   }
 
