--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -66,6 +66,10 @@
       fill: $color-icon-gray-onemore;
     }
 
+    &_black {
+      fill: $color-black;
+    }
+
     &_right {
       padding-left: 0;
       padding-right: 30px;
@@ -180,6 +184,11 @@
       height: 20px;
     }
 
+    &_key {
+      width: 18px;
+      height: 18px;
+    }
+
     &_img {
       width: 17px;
       height: 15px;
@@ -269,11 +278,19 @@
       border-bottom: 1px solid $color-border-light;
     }
 
+    #{$b}_form-underline & {
+      border-bottom: 1px solid $color-form-border;
+    }
+
     #{$b}_white-underline & {
       border-bottom: 1px solid rgba($color-white, .6);
     }
 
     #{$b}_light-underline:hover & {
+      border-bottom: 1px solid $color-basic;
+    }
+
+    #{$b}_form-underline:hover & {
       border-bottom: 1px solid $color-basic;
     }
   }
