--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -137,6 +137,7 @@ include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
+include ../components/popup-password-change/popup-password-change
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
 include ../components/results/results
