--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -49,6 +49,7 @@ block content
         +link(href="#popup-subscribe").js-popup Popup subscribe
         +link(href="#popup-subscribe-host").js-popup Popup subscribe for host
         +link(href="#popup-cancel-request").js-popup Popup cancel request
+        +link(href="#popup-password-change").js-popup Popup password change
 
 block panels
   +main-menu
@@ -59,3 +60,4 @@ block popups
   +popup-subscribe#popup-subscribe
   +popup-subscribe-host#popup-subscribe-host
   +popup-cancel-request#popup-cancel-request
+  +popup-password-change#popup-password-change
