--- a/app/blocks/avatar-uploader/avatar-uploader.pug
+++ b/app/blocks/avatar-uploader/avatar-uploader.pug
@@ -4,5 +4,5 @@ mixin avatar-uploader()
       +avatar('assets/images/ava5.jpg')._big
     +e.content
       +e.INPUT(type="file" name="ava").input.js-upload-image
-      +link-icon('img', 'span')._icon_gray-dark._icon_mid._light-underline._no-shadow._bold.__name
+      +link-icon('img', 'span')._icon_gray-dark._icon_mid._form-underline._no-shadow._bold.__name
         block
