--- a/app/components/offer-short/offer-short.scss
+++ b/app/components/offer-short/offer-short.scss
@@ -29,6 +29,8 @@
     align-items: center;
     text-align: right;
     margin-left: auto;
+    padding-top: 3px;
+    padding-bottom: 2px;
 
     @include screen('sm') {
       justify-content: flex-start;
@@ -39,18 +41,32 @@
       width: 100%;
       order: 2;
       margin-top: 25px;
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 
   &__buttons {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     transition: opacity $ease-main;
     pointer-events: none;
     opacity: 0;
+    width: auto;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0, $color-bg 20px, $color-bg 100%);
+    padding-left: 20px;
+    background-repeat: no-repeat;
 
     @include screen('sm') {
+      position: static;
+      top: auto;
+      right: auto;
+      height: auto;
       justify-content: flex-start;
       align-items: flex-start;
       align-content: flex-start;
@@ -58,6 +74,7 @@
       width: 100%;
       order: 2;
       margin-top: 15px;
+      padding-left: 0;
     }
 
     #{$b}:not(.is-not-available):hover & {
@@ -105,11 +122,7 @@
   }
 
   &__available {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+    width: auto;
     display: flex;
     justify-content: flex-end;
     align-items: center;
