--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -159,9 +159,14 @@ block content
                     +checkbox('settings', '3')._border Send Me information about new offers via E-mail
                   +form-section-wrapper._noflex
                     +checkbox('settings', '4')._border Send Me information about new offers via E-mail
-            +form-panel()(data-hidden-panel).__panel_fixed
-              +link-icon('select-arrow', 'button')(type="reset")._back._bold._no-shadow.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
-              +button('button')(type="submit").__button_wide.js-form-submit.js-hide-form-panel Save changes
+            +e.panel_fixed(data-hidden-panel)
+              .container
+                +grid
+                  +col({ xl: 3, lg: 12 })
+                  +col({ xl: 9, lg: 12 })
+                    +form-panel()
+                      +link-icon('select-arrow', 'button')(type="reset")._back._bold._no-shadow.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
+                      +button('button')(type="submit").__button_wide.js-form-submit.js-hide-form-panel Save changes
 
 block panels
   +main-menu-inner
