fixes: add oldPas field

--- a/app/components/popup-password-change/popup-password-change.pug
+++ b/app/components/popup-password-change/popup-password-change.pug
@@ -5,8 +5,13 @@ mixin popup-password-change()
       +grid.grid_bigger
         +col({xl:12 })
           +form-section-wrapper
+            +form-box('Old password')
+              +input(type="password" name="oldPassword")
+        +col({xl:12 })
+          +form-section-wrapper
             +form-box('New password')
-              +input(type="password" name="newPassword" data-password1="password1")
+              +input(type="password" name="newPassword"
+              data-parsley-equalto="[data-password2]" data-password1="password1")
         +col({xl:12 })
           +form-section-wrapper
             +form-box('New password one more time')
