--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -1084,6 +1084,9 @@
     &_line {
       box-sizing: border-box;
       padding: 0 4px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
       @include screen('sm') {
         flex-direction: column;
@@ -1143,11 +1146,7 @@
     #{$b}__list_line & {
 
       &:not(:last-child) {
-        margin-right: 59px;
-
-        @include screen('md') {
-          margin-right: 20px;
-        }
+        margin-right: 20px;
       }
     }
   }
