fixes at sr page add individual sizes for selects

--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -40,13 +40,13 @@ mixin filter-search()
   +b.SECTION.filter&attributes(attributes)
     +e.content
       +e.wrapper.hide-sm
-        +select.js-select-dark2(name="city" readonly)
+        +select.js-select-dark2(name="city" readonly style="width: 76px;")
           option(value="placeholder" placeholder) City
           option(value="London" selected) London
           option(value="Paris") Paris
           option(value="Moscow") Moscow
       +e.wrapper.hide-md
-        +select.js-select-dark2(name="area")
+        +select.js-select-dark2(name="area" style="width: 56px;")
           option(value="placeholder" placeholder) Area
           option(value="Central London") Central London
           option(value="Stratford Area") Stratford Area
