fixes for sr add for default select special fonts for filter

--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -79,6 +79,20 @@
     #{$b}.is-filter-active & {
       pointer-events: none;
     }
+
+    select {
+      @include text-mid;
+
+      line-height: (26/17);
+      font-weight: 700;
+      color: $color-basic;
+
+      @include screen('sm') {
+        @include text;
+
+        line-height: (26/14);
+      }
+    }
   }
 
   &__buttons {
